2008-03-07  smeghead <smeghead@users.sourceforge.jp>

    * 簡易可変文字列ユーティリティを追加した。

2008-03-06  smeghead <smeghead@users.sourceforge.jp>

    * 0.1.5-beta リリース

2008-03-06  smeghead <smeghead@users.sourceforge.jp>

    * 日付項目の入力支援のJavaScriptカレンダーのwidthを200pxに指定するようにし
    た。


2008-03-05  smeghead <smeghead@users.sourceforge.jp>

    * チケット検索での検索結果CSVダウンロードで内容が長い場合にエラーになる問
    題を修正した。
    * 各ファイルのvimの設定用の行を修正、追加した。
    * CSVのダウンロード時のContent-Typeを、text/plainからtext/x-csvに変更した。

2008-03-03  smeghead <smeghead@users.sourceforge.jp>

    * チケット一覧の日時の秒の表示をしないようにした。 
    * チケット一覧のIDと放置日数のCSSを変更。IDは中央寄せ、放置日数は右寄せで
    表示するようにした。

2008-03-02  smeghead <smeghead@users.sourceforge.jp>

    * トップページの編集においての成形済ブロック(PRE)の記法を、チケットの複数
    行テキストでの記法に変更した。'>|\n' で始まり、'|<'で終わる領域をpreタグで
    出力するようにした。
    * labelタグのスペル違いがあったのを修正した。
    * チケット返信フォームをチケット属性が付いている項目と付いていない項目で別
    のテーブルに分割した。動作がわかり易くするため。
    * チケット履歴のレイアウトを修正した。
    * チケットリンク機能の追加。複数行テキストの項目で、#123 のように、#の後に
    数値が連続する場合に、数字をチケットIDと見做してリンクを付加するようにした
    。

2008-02-28  smeghead <smeghead@users.sourceforge.jp>

    * 管理ツールの項目設定の項目の追加時に、項目名が空のままで登録できていたバ
    グを修正した。
    * チケット履歴を見易くする修正をした。

2008-02-25  smeghead <smeghead@users.sourceforge.jp>

    * hook機能のメール送信サンプルスクリプトで、メール本文の項目の内容に改行が
    出力されないのを修正した。
    * pre記法の出力中には、改行をbrタグに変換しないように修正した。

2008-02-24  smeghead <smeghead@users.sourceforge.jp>

    * チケット項目(複数行テキスト)の値にpre記法を追加した。
    '>|\n' で始まり、'|<'で終わる領域をpreタグで出力するようにした。

2008-02-24  smeghead <smeghead@users.sourceforge.jp>

    * 0.1.4-beta リリース

2008-02-24  smeghead <smeghead@users.sourceforge.jp>

    * チケットの項目の内容のサイズが、1024以上ある場合にエラーになるのを再現す
    るテストを追加した。
    * wiki記法で出力する際に、末尾の改行を出力していないため、pre記法が正しく
    動作していなかったのを修正した。
    * wiki記法ヘルプにpre記法について追記
    * チケット一覧のページャを10個までしか表示しないように修正した。

2008-02-19  smeghead <smeghead@users.sourceforge.jp>

    * チケット一覧で各項目の幅を指定できるように、trタグにクラス指定をするよう
    に修正した。

2008-02-18  smeghead <smeghead@users.sourceforge.jp>

    * 投稿完了メッセージ部分のXSS対策を行なった。
    * 状態名などのXSS対策を行なった。